[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
tokio-postgres = "0.7.7"
tokio = { version = "1.24.2", features = ["macros", "rt-multi-thread"] }
roux = "2.2.5"
dotenv = "0.15.0"
serde = "1.0.152"
serde_json = "1.0.91"


